--- a/config/picom/picom.conf
+++ b/config/picom/picom.conf
@@ -239,7 +239,7 @@ blur-background-exclude = [
 # Specify the backend to use: `xrender`, `glx`, or `xr_glx_hybrid`.
 # `xrender` is the default one.
 #
-experimental-backends = true;
+#experimental-backends = true;
 backend = "glx";
 #backend = "xrender";
 
