fix polybar's rofi

--- a/modules/themes/main/config/polybar/default/modules.ini
+++ b/modules/themes/main/config/polybar/default/modules.ini
@@ -1027,13 +1027,13 @@ label-empty-padding = 1
 [module/menu]
 type = custom/text
 
-content = 
+content = 
 content-font = 6
 content-background = ${color.BGL}
 content-foreground = ${color.BLUE}
 content-padding = 0
 
-click-left = ~/.config/rofi/launchers/misc/launcher.sh
+click-left = $DOTFILES_BIN/rofi/launcher
 ;;click-middle = path_to_script
 ;;click-right = path_to_script
 
@@ -1051,7 +1051,7 @@ content-background = ${color.BGL}
 content-foreground = ${color.RED}
 content-padding = 0
 
-click-left = ~/.config/rofi/powermenu/powermenu.sh
+click-left = $DOTFILES_BIN/rofi/powermenu
 
 [module/pulseaudio]
 type = internal/pulseaudio
