an attempt at fixing polybar theme

--- a/modules/themes/main/config/polybar/default/config.ini
+++ b/modules/themes/main/config/polybar/default/config.ini
@@ -121,7 +121,7 @@ module-margin-right = 0
 ; text
 font-0 = "Iosevka Nerd Font:style=bold:size=10;3"
 ; icons
-font-1 = "Iosevka Nerd Font:size=12;3"
+font-1 = "RobotoMono Nerd Font:size=12;3"
 ; glyphs
 font-2 = "Iosevka Nerd Font:size=15;4"
 ; dot
