--- a/modules/themes/main/config/polybar/default/modules.ini
+++ b/modules/themes/main/config/polybar/default/modules.ini
@@ -1027,7 +1027,7 @@ label-empty-padding = 1
 [module/menu]
 type = custom/text
 
-content = 
+content = 異
 content-font = 6
 content-background = ${color.BGL}
 content-foreground = ${color.BLUE}
@@ -1091,11 +1091,11 @@ format-muted-padding = 1
 
 ; Available tokens:
 ;   %percentage% (default)
-label-volume = "%percentage%% "
+label-volume = "%percentage%%"
 
 ; Available tokens:
 ;   %percentage% (default
-label-muted = " Muted "
+label-muted = " Muted"
 label-muted-foreground = ${color.RED}
 
 ; Only applies if <ramp-volume> is used
