remove useless polybar module

--- a/modules/themes/main/config/polybar/default/config.ini
+++ b/modules/themes/main/config/polybar/default/config.ini
@@ -139,7 +139,7 @@ font-5 = "Roboto:size=12;3"
 # Default
 modules-left = LD menu RD dot-alt LD bspwm RD dot cpu dot used-memory dot filesystem
 modules-center = 
-modules-right = updates dot pulseaudio dot ethernet dot LD date RD dot-alt LD sysmenu RD
+modules-right = pulseaudio dot ethernet dot LD date RD dot-alt LD sysmenu RD
 
 ; The separator will be inserted between the output of each module
 separator =
