--- a/modules/themes/main/config/polybar/default/modules.ini
+++ b/modules/themes/main/config/polybar/default/modules.ini
@@ -280,7 +280,7 @@ interval = 0.5
 ;   <ramp-coreload>
 ;;format = <label> <ramp-coreload>
 format = <label>
-format-prefix = 
+format-prefix = 󰄧
 format-prefix-font = 2
 format-prefix-foreground = ${color.YELLOW}
 format-background = ${color.BG}
@@ -326,7 +326,7 @@ time-alt = %A %b %d, %G
 ;   <label> (default)
 
 format = <label>
-format-prefix = " "
+format-prefix = "󰅐 "
 format-prefix-font = 2
 format-prefix-foreground = ${color.BROWN}
 format-background = ${color.BGL}
@@ -369,7 +369,7 @@ format-mounted = <label-mounted>
 format-mounted-background = ${color.BG}
 format-mounted-padding = 1
 
-format-mounted-prefix = 
+format-mounted-prefix = 󰆼
 format-mounted-prefix-font = 2
 format-mounted-prefix-foreground = ${color.ORANGE}
 
@@ -379,7 +379,7 @@ format-unmounted = <label-unmounted>
 format-unmounted-background = ${color.BG}
 format-unmounted-padding = 1
 
-format-unmounted-prefix = 
+format-unmounted-prefix = 󰆼
 format-unmounted-prefix-font = 2
 format-unmounted-prefix-foreground = ${color.ORANGE}
 
@@ -423,7 +423,7 @@ format = <label>
 format-background = ${color.BG}
 format-padding = 1
 
-format-prefix = 
+format-prefix = 
 format-prefix-font = 2
 format-prefix-foreground = ${color.CYAN}
 
@@ -475,8 +475,8 @@ format = <label>
 format-background = ${color.BG}
 format-padding = 1
 
-format-prefix = 
-format-prefix-font = 2
+format-prefix = " "
+format-prefix-font = 1
 format-prefix-foreground = ${color.CYAN}
 
 label = " %output% MB"
@@ -608,14 +608,14 @@ accumulate-stats = true
 unknown-as-up = true
 
 format-connected = <label-connected>
-format-connected-prefix = "歷 "
+format-connected-prefix = "󰒍 "
 format-connected-prefix-foreground = ${color.PURPLE}
 format-connected-prefix-font = 2
 format-connected-background = ${color.BG}
 format-connected-padding = 1
 
 format-disconnected = <label-disconnected>
-format-disconnected-prefix = "轢 "
+format-disconnected-prefix = "󰒎 "
 format-disconnected-prefix-font = 2
 format-disconnected-foreground = ${color.BGA}
 format-disconnected-background = ${color.BG}
@@ -960,17 +960,17 @@ enable-scroll = true
 ; NOTE: The desktop name needs to match the name configured by the WM
 ; You can get a list of the defined desktops using:
 ; $ xprop -root _NET_DESKTOP_NAMES
-icon-0 = I;
-icon-1 = II;
+icon-0 = I;󰆍
+icon-1 = II;󰘐
 icon-2 = III;
 icon-3 = IV;
-icon-4 = V;
-icon-5 = VI;ﭮ
-icon-6 = VII;
+icon-4 = V;󰉔
+icon-5 = VI;󰙯
+icon-6 = VII;󰉋
 icon-7 = VIII;
 icon-8 = IX;
 icon-9 = X;
-icon-default = 
+icon-default = 
 
 ; Available tags:
 ;   <label-monitor>
@@ -1027,7 +1027,7 @@ label-empty-padding = 1
 [module/menu]
 type = custom/text
 
-content = 異
+content = 󰑣
 content-font = 6
 content-background = ${color.BGL}
 content-foreground = ${color.BLUE}
@@ -1045,7 +1045,7 @@ click-left = $DOTFILES_BIN/rofi/launcher
 [module/sysmenu]
 type = custom/text
 
-content = 襤
+content = 󰐥
 content-font = 2
 content-background = ${color.BGL}
 content-foreground = ${color.RED}
@@ -1073,7 +1073,7 @@ interval = 5
 ;   <ramp-volume>
 ;   <bar-volume>
 format-volume = <label-volume>
-format-volume-prefix = "墳 "
+format-volume-prefix = "󰕾 "
 format-volume-prefix-font = 2
 format-volume-background = ${color.BG}
 format-volume-prefix-foreground = ${color.BLUE}
@@ -1084,7 +1084,7 @@ format-volume-padding = 1
 ;   <ramp-volume>
 ;   <bar-volume>
 format-muted = <label-muted>
-format-muted-prefix = 婢
+format-muted-prefix = 󰖁
 format-muted-prefix-font = 2
 format-muted-background = ${color.BG}
 format-muted-padding = 1
@@ -1099,9 +1099,9 @@ label-muted = " Muted"
 label-muted-foreground = ${color.RED}
 
 ; Only applies if <ramp-volume> is used
-ramp-volume-0 = 奄
-ramp-volume-1 = 奔
-ramp-volume-2 = 墳
+ramp-volume-0 = 󰕿
+ramp-volume-1 = 󰖀
+ramp-volume-2 = 󰕾
 
 ;; _-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_
 
