--- a/config/tmux/tmux.conf
+++ b/config/tmux/tmux.conf
@@ -35,8 +35,8 @@ bind '"' split-window -v -c "#{pane_current_path}"
 
 bind S-Left run '$TMUX_HOME/swap-pane.sh left'
 bind S-Down run '$TMUX_HOME/swap-pane.sh down'
-bind K-Up run '$TMUX_HOME/swap-pane.sh up'
-bind L-Right run '$TMUX_HOME/swap-pane.sh right'
+bind S-Up run '$TMUX_HOME/swap-pane.sh up'
+bind S-Right run '$TMUX_HOME/swap-pane.sh right'
 bind S-m run '$TMUX_HOME/swap-pane.sh master'
 
 # Disable confirmation
@@ -48,7 +48,7 @@ is_vim='echo "#{pane_current_command}" | grep -iqE "(^|\/)g?(view|n?vim?x?)(diff
 bind -n C-Left if-shell "$is_vim" "send-keys C-h" "select-pane -L"
 bind -n C-Down if-shell "$is_vim" "send-keys C-j" "select-pane -D"
 bind -n C-Up if-shell "$is_vim" "send-keys C-k" "select-pane -U"
-bind -n C-Rigth if-shell "$is_vim" "send-keys C-l" "select-pane -R"
+bind -n C-Right if-shell "$is_vim" "send-keys C-l" "select-pane -R"
 bind -n C-\\ if-shell "$is_vim" "send-keys C-\\" "select-pane -l"
 
 # reload config without killing server
