fix prefix highlighting plugin for tmux

--- a/config/tmux/tmux.conf
+++ b/config/tmux/tmux.conf
@@ -21,6 +21,8 @@ setw -g aggressive-resize off
 # For terminals that support them, propagate these events to programs that
 # understand them.
 set  -s focus-events on
+# For prefix highlighting
+set -g status-right '#{prefix_highlight} | %a %Y-%m-%d %H:%M'
 
 ########################################
 # Keybinds                             #
