customize tmux bar

--- a/config/tmux/tmux.conf
+++ b/config/tmux/tmux.conf
@@ -2,6 +2,7 @@
 ########################################
 
 set  -s default-terminal "xterm-256color"
+set-option -ga terminal-overrides ",xterm-256color:Tc"
 
 setw -g automatic-rename on      # rename window after current program
 set  -g renumber-windows on      # renumber windows when one is closed
@@ -23,6 +24,14 @@ setw -g aggressive-resize off
 set  -s focus-events on
 # For prefix highlighting
 set -g status-right '#{prefix_highlight} | %a %Y-%m-%d %H:%M'
+
+# Status bar theme
+set -g @dracula-show-powerline true
+set -g @dracula-fixed-location "Iasi"
+set -g @dracula-plugins "weather"
+set -g @dracula-show-flags true
+set -g @dracula-show-left-icon session
+set -g status-position top
 
 ########################################
 # Keybinds                             #
