--- a/config/tmux/tmux.conf
+++ b/config/tmux/tmux.conf
@@ -1,8 +1,8 @@
 # tmux.conf
 ########################################
 
-set  -s default-terminal "xterm-256color"
-set-option -ga terminal-overrides ",xterm-256color:Tc"
+set -s default-terminal "xterm-256color"
+set-option -ag terminal-overrides ",xterm-256color:RGB"
 
 setw -g automatic-rename on      # rename window after current program
 set  -g renumber-windows on      # renumber windows when one is closed
@@ -27,6 +27,13 @@ set -g status-right '#{prefix_highlight} | %a %Y-%m-%d %H:%M'
 
 # Status bar theme
 set -g status-position top
+set -g @dracula-show-powerline true
+set -g @dracula-show-location false
+set -g @dracula-show-fahrenheit false
+set -g @dracula-plugins "weather"
+set -g @dracula-show-flags true
+set -g @dracula-show-left-icon session
+set -g status-bg color111
 
 ########################################
 # Keybinds                             #
