--- a/config/tmux/tmux.conf
+++ b/config/tmux/tmux.conf
@@ -27,13 +27,23 @@ set -g status-right '#{prefix_highlight} | %a %Y-%m-%d %H:%M'
 
 # Status bar theme
 set -g status-position top
-set -g @dracula-show-powerline true
-set -g @dracula-show-location false
-set -g @dracula-show-fahrenheit false
-set -g @dracula-plugins "weather"
-set -g @dracula-show-flags true
-set -g @dracula-show-left-icon session
-set -g status-bg color111
+set -g @catppuccin_window_left_separator ""
+set -g @catppuccin_window_right_separator " "
+set -g @catppuccin_window_middle_separator " █"
+set -g @catppuccin_window_number_position "right"
+
+set -g @catppuccin_window_default_fill "number"
+set -g @catppuccin_window_default_text "#W"
+
+set -g @catppuccin_window_current_fill "number"
+set -g @catppuccin_window_current_text "#W"
+
+set -g @catppuccin_status_modules_right "application user weather session"
+set -g @catppuccin_status_left_separator  ""
+set -g @catppuccin_status_right_separator " "
+set -g @catppuccin_status_right_separator_inverse "yes"
+set -g @catppuccin_status_fill "all"
+set -g @catppuccin_status_connect_separator "no"
 
 ########################################
 # Keybinds                             #
