--- a/config/tmux/tmux.conf
+++ b/config/tmux/tmux.conf
@@ -27,23 +27,12 @@ set -g status-right '#{prefix_highlight} | %a %Y-%m-%d %H:%M'
 
 # Status bar theme
 set -g status-position top
-set -g @catppuccin_window_left_separator ""
-set -g @catppuccin_window_right_separator " "
-set -g @catppuccin_window_middle_separator " █"
-set -g @catppuccin_window_number_position "right"
-
-set -g @catppuccin_window_default_fill "number"
-set -g @catppuccin_window_default_text "#W"
-
-set -g @catppuccin_window_current_fill "number"
-set -g @catppuccin_window_current_text "#W"
-
-set -g @catppuccin_status_modules_right "application user weather session"
-set -g @catppuccin_status_left_separator  ""
-set -g @catppuccin_status_right_separator " "
-set -g @catppuccin_status_right_separator_inverse "yes"
-set -g @catppuccin_status_fill "all"
-set -g @catppuccin_status_connect_separator "no"
+set -g @plugin 'wfxr/tmux-power'
+set -g @tmux_power_theme 'default'
+set -g @tmux_power_show_upload_speed    false
+set -g @tmux_power_show_download_speed  false
+set -g @tmux_power_show_web_reachable   false
+set -g @tmux_power_prefix_highlight_pos 'L'
 
 ########################################
 # Keybinds                             #
