update tmux theme

--- a/config/tmux/tmux.conf
+++ b/config/tmux/tmux.conf
@@ -22,16 +22,14 @@ setw -g aggressive-resize off
 # For terminals that support them, propagate these events to programs that
 # understand them.
 set  -s focus-events on
-# For prefix highlighting
-set -g status-right '#{prefix_highlight} | %a %Y-%m-%d %H:%M'
 
 # Status bar theme
 set -g status-position top
-set -g @tmux_power_theme 'default'
+set -g @tmux_power_theme '#0087af'
 set -g @tmux_power_show_upload_speed    false
 set -g @tmux_power_show_download_speed  false
 set -g @tmux_power_show_web_reachable   false
-set -g @tmux_power_prefix_highlight_pos 'L'
+set -g @tmux_power_prefix_highlight_pos 'LR'
 
 ########################################
 # Keybinds                             #
