finish up customzing tmux status bar

--- a/config/tmux/tmux.conf
+++ b/config/tmux/tmux.conf
@@ -23,125 +23,91 @@ setw -g aggressive-resize off
 # understand them.
 set  -s focus-events on
 
-# Status bar theme (and other)
-set -g status-position top
-# set -g @tmux_power_theme '#0087af'
-# set -g @tmux_power_show_upload_speed    false
-# set -g @tmux_power_show_download_speed  false
-# set -g @tmux_power_show_web_reachable   false
-# set -g @tmux_power_prefix_highlight_pos 'LR'
-
-# $1: option
-# $2: default value
-tmux_get() {
-    local value="$(tmux show -gqv "$1")"
-    [ -n "$value" ] && echo "$value" || echo "$2"
-}
-
-# $1: option
-# $2: value
-tmux_set() {
-    tmux set-option -gq "$1" "$2"
-}
+### Status bar theme (and other)
+set -g status-position bottom
 
 # Options
 rarrow=''
 larrow=''
 session_icon=''
-user_icon=''
-time_icon=''
-date_icon=''
-time_format='%T'
-date_format='%F'
 # short for Theme-Colour
 TC='#0087af'
 
-G01=#080808 #232
-G02=#121212 #233
-G03=#1c1c1c #234
-G04=#262626 #235
-G05=#303030 #236
 G06=#3a3a3a #237
 G07=#444444 #238
-G08=#4e4e4e #239
-G09=#585858 #240
-G10=#626262 #241
-G11=#6c6c6c #242
 G12=#767676 #243
 
-FG="$G10"
-BG="#1e222a"
+FG="#626262"
+BG="#1c2328"
 
 # Status options
-tmux_set status-interval 1
-tmux_set status on
+set -gq status-interval 1
+set -gq status on
 
 # Basic status bar colors
-tmux_set status-fg "$FG"
-tmux_set status-bg "$BG"
-tmux_set status-attr none
+set -gq status-fg "$FG"
+set -gq status-bg "$BG"
+set -gq status-attr none
 
 # tmux-prefix-highlight
-tmux_set @prefix_highlight_fg "$BG"
-tmux_set @prefix_highlight_bg "$FG"
-tmux_set @prefix_highlight_show_copy_mode 'on'
-tmux_set @prefix_highlight_copy_mode_attr "fg=$TC,bg=$BG,bold"
-tmux_set @prefix_highlight_output_prefix "#[fg=$TC]#[bg=$BG]$larrow#[bg=$TC]#[fg=$BG]"
-tmux_set @prefix_highlight_output_suffix "#[fg=$TC]#[bg=$BG]$rarrow"
+set -gq @prefix_highlight_fg "$BG"
+set -gq @prefix_highlight_bg "$FG"
+set -gq @prefix_highlight_show_copy_mode 'on'
+set -gq @prefix_highlight_copy_mode_attr "fg=$TC,bg=$BG,bold"
+set -gq @prefix_highlight_output_prefix "#[fg=$TC]#[bg=$BG]$larrow#[bg=$TC]#[fg=$BG]"
+set -gq @prefix_highlight_output_suffix "#[fg=$TC]#[bg=$BG]$rarrow"
 
-#     
 # Left side of status bar
-tmux_set status-left-bg "$G04"
-tmux_set status-left-fg "$G12"
-tmux_set status-left-length 150
-user=$(whoami)
-LS="#[fg=$G04,bg=$TC,bold] $user_icon $user@#h #[fg=$TC,bg=$G06,nobold]$rarrow#[fg=$TC,bg=$G06] $session_icon #S "
+set -gq status-left-bg "#262626"
+set -gq status-left-fg "$G12"
+set -gq status-left-length 150
+LS="#[fg=$TC,bg=$G06] $session_icon #S "
 LS="$LS#[fg=$G06,bg=$BG]$rarrow"
 LS="$LS#{prefix_highlight}"
-tmux_set status-left "$LS"
+set -gq status-left "$LS"
 
 # Right side of status bar
-tmux_set status-right-bg "$BG"
-tmux_set status-right-fg "$G12"
-tmux_set status-right-length 150
-RS="#[fg=$G06]$larrow#[fg=$TC,bg=$G06] $time_icon $time_format #[fg=$TC,bg=$G06]$larrow#[fg=$G04,bg=$TC] $date_icon $date_format "
+set -gq status-right-bg "$BG"
+set -gq status-right-fg "$G12"
+set -gq status-right-length 150
+RS="#[fg=$G06]$larrow#[fg=$TC,bg=$G06] #{weather} "
 RS="#{prefix_highlight}$RS"
-tmux_set status-right "$RS"
+set -gq status-right "$RS"
 
 # Window status format
-tmux_set window-status-format         "#[fg=$BG,bg=$G06]$rarrow#[fg=$TC,bg=$G06] #I:#W #[fg=$G06,bg=$BG]$rarrow"
-tmux_set window-status-current-format "#[fg=$BG,bg=$TC]$rarrow#[fg=$BG,bg=$TC,bold] #I:#W #[fg=$TC,bg=$BG,nobold]$rarrow"
+set -gq window-status-format         "#[fg=$BG,bg=$G06]$rarrow#[fg=$TC,bg=$G06] #I:#W #[fg=$G06,bg=$BG]$rarrow"
+set -gq window-status-current-format "#[fg=$BG,bg=$TC]$rarrow#[fg=$BG,bg=$TC,bold] #I:#W #[fg=$TC,bg=$BG,nobold]$rarrow"
 
 # Window status style
-tmux_set window-status-style          "fg=$TC,bg=$BG,none"
-tmux_set window-status-last-style     "fg=$TC,bg=$BG,bold"
-tmux_set window-status-activity-style "fg=$TC,bg=$BG,bold"
+set -gq window-status-style          "fg=$TC,bg=$BG,none"
+set -gq window-status-last-style     "fg=$TC,bg=$BG,bold"
+set -gq window-status-activity-style "fg=$TC,bg=$BG,bold"
 
 # Window separator
-tmux_set window-status-separator ""
+set -gq window-status-separator ""
 
 # Pane border
-tmux_set pane-border-style "fg=$G07,bg=default"
+set -gq pane-border-style "fg=$G07,bg=default"
 
 # Active pane border
-tmux_set pane-active-border-style "fg=$TC,bg=default"
+set -gq pane-active-border-style "fg=$TC,bg=default"
 
 # Pane number indicator
-tmux_set display-panes-colour "$G07"
-tmux_set display-panes-active-colour "$TC"
+set -gq display-panes-colour "$G07"
+set -gq display-panes-active-colour "$TC"
 
 # Clock mode
-tmux_set clock-mode-colour "$TC"
-tmux_set clock-mode-style 24
+set -gq clock-mode-colour "$TC"
+set -gq clock-mode-style 24
 
 # Message
-tmux_set message-style "fg=$TC,bg=$BG"
+set -gq message-style "fg=$TC,bg=$BG"
 
 # Command message
-tmux_set message-command-style "fg=$TC,bg=$BG"
+set -gq message-command-style "fg=$TC,bg=$BG"
 
 # Copy mode highlight
-tmux_set mode-style "bg=$TC,fg=$FG"
+set -gq mode-style "bg=$TC,fg=$FG"
 
 ########################################
 # Keybinds                             #
@@ -162,6 +128,10 @@ bind S-m run '$TMUX_HOME/swap-pane.sh master'
 
 # Disable confirmation
 bind x kill-pane
+
+# Bind showing and unshowing the tmux bar
+bind @ set status on
+bind C-@ set status off
 
 # Smart pane switching with awareness of vim splits
 # See: https://github.com/christoomey/vim-tmux-navigator
