add tmux continuum plugin

--- a/config/tmux/tmux.conf
+++ b/config/tmux/tmux.conf
@@ -23,6 +23,9 @@ setw -g aggressive-resize off
 # understand them.
 set  -s focus-events on
 
+# Enable starting the tmux server on boot
+set -g @continuum-boot 'on'
+
 ### Status bar theme (and other)
 set -g status-position bottom
 
