enforce emacs bindings in tmux

--- a/config/tmux/tmux.conf
+++ b/config/tmux/tmux.conf
@@ -115,6 +115,9 @@ set -gq mode-style "bg=$TC,fg=$FG"
 ########################################
 # Keybinds                             #
 ########################################
+# make sure the default (emacs) is used
+set -g status-keys emacs
+
 bind c new-window      -c "#{pane_current_path}"
 bind % split-window -h -c "#{pane_current_path}"
 bind '"' split-window -v -c "#{pane_current_path}"
