remove default tmux text from right status bar

--- a/config/tmux/tmux.conf
+++ b/config/tmux/tmux.conf
@@ -72,6 +72,8 @@ set -gq status-left "$LS"
 # Right side of status bar
 set -gq status-right-bg "$BG"
 set -gq status-right-fg "$G12"
+set -gq status-right-length 0
+set -gq status-right ""
 
 # Window status format
 set -gq window-status-format         "#[fg=$BG,bg=$G06]$rarrow#[fg=$TC,bg=$G06] #I:#W #[fg=$G06,bg=$BG]$rarrow"
