fix tmux terminal bind

--- a/config/tmux/tmux.conf
+++ b/config/tmux/tmux.conf
@@ -2,7 +2,7 @@
 ########################################
 
 set -s default-terminal "xterm-256color"
-set-option -ag terminal-overrides ",xterm-256color:RGB"
+set-option -ag terminal-overrides ",xterm-256color:TC"
 
 setw -g automatic-rename on      # rename window after current program
 set  -g renumber-windows on      # renumber windows when one is closed
