make some improvements to tmux config

--- a/config/tmux/tmux.conf
+++ b/config/tmux/tmux.conf
@@ -42,7 +42,7 @@ BG="#1c2328"
 
 # Status options
 set -gq status-interval 1
-set -gq status on
+set -gq status off # I like to only enable it when I need to, which is very rare
 
 # Basic status bar colors
 set -gq status-fg "$FG"
@@ -110,8 +110,13 @@ set -gq mode-style "bg=$TC,fg=$FG"
 ########################################
 # Keybinds                             #
 ########################################
-# make sure the default (emacs) is used
-set -g status-keys emacs
+# Vi-style keybinds
+set -g status-keys vi
+set -g mode-keys   vi
+
+# Bindings for copy mode to be like vim
+bind -T copy-mode-vi v send -X begin-selection
+bind -T copy-mode-vi y send-keys -X copy-pipe-and-cancel
 
 bind c new-window      -c "#{pane_current_path}"
 bind % split-window -h -c "#{pane_current_path}"
