Revert "fix polymap showing over fullscreen apps"
This reverts commit 49bff19ec7ec6cc37bd812776c6b3cedb414b779.

--- a/modules/themes/main/config/polybar/default/config.ini
+++ b/modules/themes/main/config/polybar/default/config.ini
@@ -38,7 +38,7 @@ monitor-strict = false
 
 ; Tell the Window Manager not to configure the window.
 ; Use this to detach the bar if your WM is locking its size/position.
-override-redirect = true
+override-redirect = false
 
 ; Put the bar at the bottom of the screen
 bottom = false
@@ -210,7 +210,7 @@ tray-scale = 1.0
 ; Currently supported WM's:
 ;   bspwm
 ;   i3 (requires: `override-redirect = true`)
-wm-restack = bspwm
+; wm-restack =
 
 ; Set a DPI values used when rendering text
 ; This only affects scalable fonts
