--- a/config/tmux/tmux.conf
+++ b/config/tmux/tmux.conf
@@ -1,8 +1,8 @@
 # tmux.conf
 ########################################
 
-set -s default-terminal "xterm-256color"
-set-option -ag terminal-overrides ",xterm-256color:TC"
+set -s default-terminal "tmux-256color"
+set-option -ag terminal-overrides ",*:RGB"
 
 setw -g automatic-rename on      # rename window after current program
 set  -g renumber-windows on      # renumber windows when one is closed
